[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.12.0"
hashbrown = "0.14.3"
itertools = "0.12.0"
num = "0.4.1"
num-integer = "0.1.45"
regex = "1.10.2"
strum = "0.25.0"
strum_macros = "0.25.3"
textwrap = "0.16.0"
